[metadata]
name = fastapi-channels
version = attr: fastapi_channels.__version__
author = 宋建波
author_email = banxingzhedeyangguang@gmail.com
description = This project provides a simple setup for creating WebSocket communication channels using FastAPI.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/YGuang233/fastapi-channels
keywords =
    fastapi
    broadcaster
    pydantic
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Typing :: Typed
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: AsyncIO
    Framework :: FastAPI
    Framework :: Pydantic
    Framework :: Pydantic :: 1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
packages = find:
install_requires =
    fastapi>=0.110.0
    broadcaster>=0.3.1
    fastapi_limiter<=0.1.6
    pydantic>=1.7.4,!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0
    typing-extensions>=4.8.0

[options.packages.find]
exclude =
    tests*
    docs*
    docs_src*
    example*
    0.0.1b0*
    *_d.py*
; 这里使用excludes 可行吗？ 没有试过
[options.extras_require]
dev =
    black
standard =
    fastapi[standard] >=0.110.0
    httpx >=0.23.0
    jinja2 >=2.11.2
    python-multipart >=0.0.7
    email-validator >=2.0.0
    uvicorn[standard] >=0.12.0
all =
    fastapi[all] >=0.110.0

[coverage:run]
parallel = true
data_file = coverage/.coverage
source =
    docs_src
    tests
    fastapi_channels

[coverage:report]
show_missing = true
sort = -Cover

[coverage:html]
show_contexts = true

[mypy]
strict = true

[mypy-fastapi_channels.concurrency]
warn_unused_ignores = false
ignore_missing_imports = true

[mypy-fastapi_channels.tests.*]
ignore_missing_imports = true
check_untyped_defs = true

[mypy-docs_src.*]
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[flake8]
max-line-length = 88
extend-ignore =
    E501
    B008
    C901
    W191

